RESOLVED FIXED198641
[iOS] At least 6 API tests are failing due to an exception when writing NSAttributedString to the pasteboard
https://bugs.webkit.org/show_bug.cgi?id=198641
Summary [iOS] At least 6 API tests are failing due to an exception when writing NSAtt...
Wenson Hsieh
Reported 2019-06-06 20:39:48 PDT
Attachments
Patch (4.91 KB, patch)
2019-06-06 21:56 PDT, Wenson Hsieh
no flags
Fix open source build (5.11 KB, patch)
2019-06-06 22:18 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-06-06 20:41:29 PDT
They are: --- WKAttachmentTests.CopyAndPasteBetweenWebViews WKAttachmentTests.InsertPastedAttributedStringContainingMultipleAttachments WKAttachmentTests.InsertPastedAttributedStringContainingImage WKWebViewEditActions.PasteAsQuotation WKWebViewEditActions.PasteAndMatchStyle UIPasteboardTests.CopyRichTextWritesConcreteTypes
Wenson Hsieh
Comment 2 2019-06-06 21:56:38 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2019-06-06 22:18:17 PDT
Created attachment 371559 [details] Fix open source build
Tim Horton
Comment 4 2019-06-06 23:25:46 PDT
Comment on attachment 371559 [details] Fix open source build View in context: https://bugs.webkit.org/attachment.cgi?id=371559&action=review > Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:291 > + swizzler = std::make_unique<ClassMethodSwizzler>(NSAttributedString.class, @selector(writableTypeIdentifiersForItemProvider), reinterpret_cast<IMP>(writableTypeIdentifiersForItemProviderWithoutPublicRTFD)); 🤨
Wenson Hsieh
Comment 5 2019-06-07 07:13:09 PDT
Comment on attachment 371559 [details] Fix open source build View in context: https://bugs.webkit.org/attachment.cgi?id=371559&action=review >> Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:291 >> + swizzler = std::make_unique<ClassMethodSwizzler>(NSAttributedString.class, @selector(writableTypeIdentifiersForItemProvider), reinterpret_cast<IMP>(writableTypeIdentifiersForItemProviderWithoutPublicRTFD)); > > 🤨 🤷🏻‍♂️
WebKit Commit Bot
Comment 6 2019-06-07 07:43:02 PDT
Comment on attachment 371559 [details] Fix open source build Clearing flags on attachment: 371559 Committed r246198: <https://trac.webkit.org/changeset/246198>
WebKit Commit Bot
Comment 7 2019-06-07 07:43:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.