Tools/TestWebKitAPI/cocoa/TestWKWebView.mm
@@ -45,6 +45,7 @@
 
 #if PLATFORM(IOS_FAMILY)
 #import "UIKitSPI.h"
+#import <MobileCoreServices/MobileCoreServices.h>
 #import <wtf/SoftLinking.h>
 SOFT_LINK_FRAMEWORK(UIKit)
 SOFT_LINK_CLASS(UIKit, UIWindow)
@@ -272,6 +273,25 @@ NSEventMask __simulated_forceClickAssociatedEventsMask(id self, SEL _cmd)
 
 #if PLATFORM(IOS_FAMILY)
 
+static NSArray<NSString *> *writableTypeIdentifiersForItemProviderWithoutPublicRTFD()
+{
+    return @[
+        @"com.apple.uikit.attributedstring",
+        (__bridge NSString *)kUTTypeFlatRTFD,
+        (__bridge NSString *)kUTTypeUTF8PlainText,
+    ];
+}
+
+static void applyWorkaroundToAllowWritingAttributedStringsToItemProviders()
+{
+    // FIXME: Remove this once <rdar://problem/51510554> is fixed.
+    static std::unique_ptr<ClassMethodSwizzler> swizzler;
+    static dispatch_once_t onceToken;
+    dispatch_once(&onceToken, ^{
+        swizzler = std::make_unique<ClassMethodSwizzler>(NSAttributedString.class, @selector(writableTypeIdentifiersForItemProvider), reinterpret_cast<IMP>(writableTypeIdentifiersForItemProviderWithoutPublicRTFD));
+    });
+}
+
 using InputSessionChangeCount = NSUInteger;
 static InputSessionChangeCount nextInputSessionChangeCount()
 {
@@ -323,6 +343,7 @@ static UICalloutBar *suppressUICalloutBar()
     // FIXME: Remove this workaround once <https://webkit.org/b/175204> is fixed.
     _sharedCalloutBarSwizzler = std::make_unique<ClassMethodSwizzler>([UICalloutBar class], @selector(sharedCalloutBar), reinterpret_cast<IMP>(suppressUICalloutBar));
     _inputSessionChangeCount = 0;
+    applyWorkaroundToAllowWritingAttributedStringsToItemProviders();
 #endif
 
     return self;
